# s21_MultilayerPerceptron

./: 2_h.txt  CMakeLists.txt  Makefile  README.md  a.out  gdeeeeeeetiiiiiiiii.txt  main.cpp  manual.texi
manual/: Depozitnyi-kalxkulyator.html  Ispolxzovanie-kalxkulyatora.html  Kreditnyi-kalxkulyator.html  Vozmozhnosti.html  index.html
src/: Archive_MLP.tgz  Makefile  README.md  a.out  index.html  result.md  test.cpp
src/Archive_MLP/src/perceptron.app/Contents/MacOS/: perceptron
src/build-perceptron-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_s21_view.cpp  ui_s21_view.h
src/build-perceptron-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/build-s21_view-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_qcustomplot.cpp  moc_render_scene.cpp  moc_renderscene.cpp  moc_s21_view.cpp  qrc_resource.cpp  ui_s21_view.h
src/controller/: controller.cc  controller.h
src/matrix/: s21_matrix.cpp  s21_matrix.h  s21_support_func.cc
src/model/: .graph_network.h.swp  a.out  data.cc  data.h  facade.cc  facade.h  graph_network.cc  graph_network.h  matrix.cc  matrix.h  metric.cc  metric.cpp  metric.h  network.cc  network.h  neuron.cc  neuron.h  reader.cc  reader.h  train.cpp
src/s21_view/: main.cpp  render_scene.h  renderscene.cpp  renderscene.h  resource.qrc  s21_view.cpp  s21_view.h  s21_view.pro  s21_view.ui
src/testing/: test.cc
src/view/: main.cpp  perceptron.pro  qcustomplot.cpp  render_scene.cpp  render_scene.h  resource.qrc  s21_view.cpp  s21_view.h  s21_view.ui
(+120 files in other folders)
